--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     </tbody>
             </table>
         </div>
+        <button id="restart-scores">reiniciar scores</button>
     </div>
+    
     <div id="game-over-message" style="display: none;">
         <h2>¡Juego Terminado!</h2>
         <p>Tu puntuación fue: <span id="final-score"></span></p>
